--- a/EESClientAPI.csproj
+++ b/EESClientAPI.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{5D7183B9-367D-48CD-9A6C-BDCDF5B95840}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EESTesterClientAPI</RootNamespace>
-    <AssemblyName>EESTesterClientAPI</AssemblyName>
+    <RootNamespace>EESDataFetcher</RootNamespace>
+    <AssemblyName>EESDataFetcher</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
@@ -72,6 +72,10 @@
     <Reference Include="ClientAPI, Version=1.0.4219.25006, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>bin\x86\Debug\ClientAPI.dll</HintPath>
+    </Reference>
+    <Reference Include="mysql.data, Version=6.7.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\Program Files\MySQL\mysql-connector-net-5.2.7\mysql.data.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
